@@ -1,6 +1,7 @@
 Revision history for Perl extension CGI::Header.
 
-  - Remove CGI::Header#location and redirect
+  - Remove CGI::Header#redirect
+  - Add CGI::Header#handler
 
 0.58 (1.00-RC11) Jun 5th, 2013
 
